# amka-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
amka_py/: amka.py
tests/: test_amka_py.py
