[tool.poetry]
name = "amka-py"
version = "0.1.0"
description = "A validator for greek social security number (AMKA)"
authors = ["Zois Pagoulatos <zpagoulatos@hotmail.com>"]
license = "MIT"
repository = "https://github.com/zoispag/amka-py"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
poethepoet = "^0.9.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test   = "pytest"
cov    = "pytest --cov-report xml --cov-report term-missing --cov=amka_py tests"
format = "black ."
black  = "black --check --diff ."
pylint = "pylint amka_py/amka.py"
lint   = ["pylint", "black"]

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"